# Bot_motivation

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.caddy.yaml  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  tree.txt  uv.yaml
.github/workflows/: build.yaml  lint_and_test.yaml
app/api/endpoints/: pages.py
app/auth/: schemas.py  telegram.py  user_identification.py  user_service.py
app/botlogic/: api_actions.py  commands.py  settings.py
app/botlogic/handlers/: __init__.py  events.py  handler_telegram.py  simple.py  start_stop.py
app/core/: config_run.py  db_dependency.py  logger.py  settings.py  time_based_deletion.py
app/db/alembic/: env.py
app/db/mixins/: id_mixins.py  timestamps_mixin.py
app/db/models/: __init__.py  base.py  prediction.py  users.py
app/services/: llm_service.py  model_loader.py  motivation_ai.py  motivational_ai.py  prediction_service.py
app/templates/: create_user.html  errors.html  get_prediction.html  index.html  questions.html  save_user.html
src/: main.py
src/app/api/: routes.py
src/app/auth/: schemas.py  user_service.py
src/app/botlogic/: bot_keyboard.py  bot_manager.py  callbacks.py  commands.py
src/app/core/: config_run.py  db_dependency.py  logger.py  session_dependency.py  settings.py
src/app/services/: motivation_ai.py  prediction_service.py  user_service.py
src/app/templates/: create_user.html  index.html  save_user.html
src/prediction_app/: main.py
src/prediction_app/api/: routes.py
src/prediction_app/botlogic/: bot_keyboard.py  bot_manager.py  callback_data.py  callbacks.py
src/prediction_app/core/: config_run.py  db_dependency.py  logger.py  session_dependency.py  settings.py
src/prediction_app/schemas/: schemas.py
templates/: base.html  create_user.html  get_prediction.html  index.html  save_user.html
tests/: conftest.py  fake_settings.py  fixture.py  test_create_user.py  test_get_prediction.py  test_index.py  test_save_user.py
(+34 files in other folders)
