[project]
name = "prediction-app"
version = "0.1.0"
description = "A bot with motivating predictions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
