[project]
name = "prediction-app"
version = "0.1.0"
description = "A bot with motivating predictions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.35.1",
    "jinja2>=3.1.6",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "aiogram>=3.22.0",
    "pytz>=2025.2",
    "tzdata>=2025.2",
]
