[project]
name = "prediction-app"
version = "0.1.0"
description = "A bot with motivating predictions"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi==0.122.0",
    "huggingface-hub>=1.1.5",
    "jinja2>=3.1.6",
    "pre-commit>=4.5.0",
    "pydantic==2.11.10",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn==0.38.0",
    "aiogram>=3.22.0",
    "pytz>=2025.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "itsdangerous>=2.0.0",
    "ruff>=0.14.6",
    "uv-build>=0.9.13",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_app"]

[project.scripts]
app = "prediction_app.main:start"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
